--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^2.3.1
+  line_icons: ^2.0.1
+  filter_list: ^1.0.1
+  get_storage: ^2.0.3
+  scan: ^1.4.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -58,9 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/airplane.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
